# spatialite

android/: android-ndk-build-arm64-v8a.sh  android-ndk-build-armeabi-v7a.sh
geos-3.9.2/: ChangeLog  Makefile.in  aclocal.m4  configure
geos-3.9.2/benchmarks/: Makefile.in
geos-3.9.2/benchmarks/algorithm/: Makefile.in
geos-3.9.2/benchmarks/capi/: Makefile.in
geos-3.9.2/benchmarks/operation/: Makefile.in
geos-3.9.2/capi/: Makefile.in
geos-3.9.2/doc/: Doxyfile  Makefile.in
geos-3.9.2/include/: Makefile.in  config.h.in
geos-3.9.2/include/geos/: Makefile.in
geos-3.9.2/macros/: Makefile.in
geos-3.9.2/src/: Makefile.in
geos-3.9.2/src/algorithm/: Makefile.in
geos-3.9.2/src/edgegraph/: Makefile.in
geos-3.9.2/src/geom/: Makefile.in
geos-3.9.2/src/geomgraph/: Makefile.in
geos-3.9.2/src/index/: Makefile.in
geos-3.9.2/src/io/: Makefile.in
geos-3.9.2/src/linearref/: Makefile.in
geos-3.9.2/src/math/: Makefile.in
geos-3.9.2/src/noding/: Makefile.in
geos-3.9.2/src/operation/: Makefile.in
geos-3.9.2/src/planargraph/: Makefile.in
geos-3.9.2/src/precision/: Makefile.in
geos-3.9.2/src/shape/: Makefile.in
geos-3.9.2/tests/: Makefile.in
geos-3.9.2/tools/: Makefile.in
librttopo-librttopo-1.1.0/librttopo/: configure.ac
libspatialite-4.3.0/: configure
libspatialite-5.0.1/: config.guess  configure.ac
linux/: build-arm64-v8a.sh  build-mips-loongson.sh  build-x86_64.sh  build.sh
sqlite3-pcre/: Makefile  sqlite3-pcre.c  sqlite3-pcre.h
windows/: 3rd.cpp  CMakeLists.txt  build-x86_64.sh  build.sh  mingw-w64-x86_64.cmake
(+88 files in other folders)
